--- a/style.css
+++ b/style.css
@@ -44,22 +44,22 @@ main {
     list-style: none;
 }
 
-.side-item {
+.itemDaDash {
     border-radius: 8px;
     padding: 14px;
     cursor: pointer;
 }
 
-.side-item.active {
+.itemDaDash.active {
     background-color: #4f46e5;
 }
 
-.side-item:hover:not(.active),
+.itemDaDash:hover:not(.active),
 #logout_btn:hover {
     background-color: #e3e9f7;
 }
 
-.side-item a {
+.itemDaDash a {
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -67,11 +67,11 @@ main {
     color: #0a0a0a;
 }
 
-.side-item.active a {
+.itemDaDash.active a {
     color: #e3e9f7;
 }
 
-.side-item a i {
+.itemDaDash a i {
     display: flex;
     align-items: center;
     justify-content: center;
