--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #ffffff;
+    background-color: #702DFA;
     height: 100vh;
     border-radius: 0px 18px 18px 0px;
     position: relative;
@@ -51,7 +51,7 @@ main {
 }
 
 .itemDaDash.active {
-    background-color: #4f46e5;
+    background-color: #702DFA;
 }
 
 .itemDaDash:hover:not(.active),
@@ -86,7 +86,7 @@ main {
     position: absolute;
     top: 30px;
     right: -10px;
-    background-color: #4f46e5;
+    background-color: #702DFA;
     color: #e3e9f7;
     border-radius: 100%;
     width: 20px;
@@ -127,6 +127,14 @@ main {
     gap: 14px;
 }
 
+i{
+    color: rgba(255, 255, 255, 0.822);
+}
+
+span{
+    color: white;
+    margin-left: 10px;
+}
 
 /*  INVESTIMENTOS */
 
