--- a/style.css
+++ b/style.css
@@ -86,11 +86,11 @@ main {
     position: absolute;
     top: 30px;
     right: -10px;
-    background-color: #4F5CC6;
+    background-color: #000000;
     color: #0000009d;
     border-radius: 100%;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border: none;
     cursor: pointer;
 }
