--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ main {
     position: absolute;
     top: 30px;
     right: -10px;
-    background-color: #000000;
+    background-color: #B72778;
     color: #0000009d;
     border-radius: 100%;
     width: 25px;
