--- a/style.css
+++ b/style.css
@@ -171,8 +171,10 @@ h1.tituloInvestimento{
 
 p.p{
     text-align: center;
+    margin-top: 5px;
+    font-weight: 700;
     margin-bottom: 15px;
-    color: #702DFA;
+    color: #000;
 }
 
 button.btnGrafico{
@@ -270,6 +272,7 @@ div.explicacaoGastos{
 
 .explicacaoGastosp {
     text-align: center; /* Centraliza o texto dentro do parágrafo */
+    
 }
 
 .explicacaoGastosp .gastosSpan {
@@ -286,9 +289,25 @@ span.a{
 
 .explicacaoGastosp2{
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
     color: #000;
-    margin-top: 15px;
+    margin-top: 20px;
+    color: #702DFA;
+    margin-bottom: -10px;
 }
  
+
+
+/* ENTENDER GASTOS */
+
+button.btnVoltar{
+    width: 140px;
+    height: 37px;  
+    border-radius: 100px;
+    background-color:#B72778;
+    border: none;
+    color: white;
+    margin-top: 10px;
+}
+
