--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ p.p{
     margin-top: 5px;
     font-weight: 700;
     margin-bottom: 15px;
-    color: #000;
+    color:#702DFA;
 }
 
 button.btnGrafico{
